# stc

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: doxygen.yml  tests.yml
demos/: CMakeLists.txt
demos/src/: Minilog.cpp
docs/: Environment.md  FS.md  Fmt.md  Optional.md  README.md  StdFix.md  StringUtil.md
docs/extra-modules/: testutil.md
docs/extra-modules/testutil/: ExplicitStreamTestReporter.md  README.md
extra-modules/test/: CMakeLists.txt
extra-modules/test/stc/test/: CaptureStream.hpp  FreeEnv.hpp  FreeFile.hpp  TestDirectory.hpp  TestEnvVariable.hpp  TestFile.hpp
extra-modules/test/stc/test/catch2/: ExplicitStreamTestReporter.hpp
old_docs/: FS.md  FileLock.md  Fmt.md  FntParser.md  IO.md  StringUtil.md
src/: CMakeLists.txt
src/stc/: Colour.hpp  Environment.hpp  FS.hpp  FileLock.hpp  FileUtil.hpp  Fmt.hpp  FntParser.hpp  IO.hpp  Math.hpp  Optional.hpp  Result.hpp  StdFix.hpp  StringUtil.hpp  minilog.hpp
src/stc/unix/: Process.hpp
tests/: CMakeLists.txt
tests/src/: ColourTests.cpp  EnvironmentTests.cpp  LockTests.cpp  Main.cpp  MinilogTests.cpp  ResultTypeTests.cpp  StdFixTests.cpp  StringUtilTests.cpp  TestRunner.cpp
tests/src/_meta/: Constants.hpp  Echo.cpp
tests/src/bench/: MathBench.cpp  MinilogBench.cpp
tests/src/compiling/: EverythingCompilesTest.cpp  _README.md
tests/src/extra-modules/test/: CaptureStreamTests.cpp
tests/src/math/: 2DGeometryTests.cpp
tests/src/unix/: UnixCommandTests.cpp
tests/src/util/: FreeEnv.hpp  FreeEnvTests.cpp  TestDirectoryTests.cpp  TestEnvVariableTests.cpp  Vec2.hpp
